# parallels_HW

./: .gitignore  README.md
cuda_slau/: CMakeLists.txt
cuda_slau/include/: JacobiSolver.h
cuda_slau/src/: JacobiSolver.cu  main.cpp
load_balancing/: CMakeLists.txt  main.cpp
matrix_multiplication/: CMakeLists.txt
matrix_multiplication/include/: MatrixMultiplier.h
matrix_multiplication/src/: MatrixMultiplier.cpp  main.cpp
mpi_slau/: CMakeLists.txt
mpi_slau/include/: JacobiSolver.h
mpi_slau/src/: JacobiSolver.cpp  main.cpp
omp_slau/: CMakeLists.txt
omp_slau/include/: GaussSolver.h  JacobiSolver.h
omp_slau/src/: GaussSolver.cpp  JacobiSolver.cpp  gauss_solver  main.cpp
